compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_imported_variant_exhaustiveness.snap
---
source: tests/fixtures.rs
assertion_line: 1542
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_imported_variant_exhaustiveness.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
exhaustive
stderr:
<empty>
