compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_infer_fallback_classification.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_infer_fallback_classification.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
value unsupported nested Module.value.field;call unsupported nested Module.value.call;Some constructor payload arity
stderr:
<empty>
