compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_interface_review.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_interface_review.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
1
1
1
true
stderr:
<empty>
