compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_let_initializer_scope.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_let_initializer_scope.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
outer -> inner,stable; missing -> inner
stderr:
<empty>
