compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_main_body_validation.snap
---
source: tests/fixtures.rs
assertion_line: 4782
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_main_body_validation.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
accepted:value:setup,output:println; accepted:value:worker,actor:send; rejected:unsupported main body
stderr:
<empty>
