compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_module_family_snapshot.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_module_family_snapshot.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
4
4
36
3
2
BrokenParser:needs-review
stderr:
<empty>
