compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_mutual_recursion_group_plan.snap
---
source: tests/fixtures.rs
assertion_line: 5793
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_mutual_recursion_group_plan.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
annotated even odd:infer group:seed placeholders and solve constraints;param annotated numeric helpers:infer group:seed placeholders and solve constraints;unannotated but constrained:infer group:seed placeholders and solve constraints;later call-site constrained:infer group:seed placeholders and solve constraints;missing param facts:keep diagnostic:missing parameter facts for predeclaration;mismatched returns:reject group:return constraints do not converge
stderr:
<empty>
