compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_mutual_recursion_unannotated.snap
---
source: tests/fixtures.rs
assertion_line: 5104
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_mutual_recursion_unannotated.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
ident:answer;number;unit
stderr:
<empty>
