compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_parser_ast_builder.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_parser_ast_builder.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
1
1
1
0
stderr:
<empty>
