compiler/stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_parser_module_snapshot.snap
---
source: tests/fixtures.rs
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_parser_module_snapshot.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
4
5
10
19
17
8
8
3
Recovery:recovery
stderr:
<empty>
